<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="gms_app_name" translatable="false">MicroG RE</string>
    <string name="dialog_title_remove_account">Remove account</string>
    <string name="dialog_message_remove_account">"Are you sure you want to remove this account?

Some services and functions will be unavailable

Your data will not be lost"</string>
    <string name="dialog_confirm_button">Remove</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="snackbar_remove_account">Account %s removed</string>
    <string name="snackbar_undo_button">Undo</string>
    <string name="limited_services_app_name">microG Limited Services</string>
    <string name="gms_settings_name">microG Settings</string>
    <string name="just_a_sec">Just a sec…</string>
    <string name="google_account_label">Google</string>
    <string name="ask_permission_tos">By continuing, you allow this app and Google to use your information in accordance with their respective terms of service and privacy policies.</string>
    <string name="ask_scope_permission_title"><xliff:g example="F-Droid">%1$s</xliff:g> would like to:</string>
    <string name="ask_service_permission_title"><xliff:g example="F-Droid">%1$s</xliff:g> would like to use:</string>
    <string name="account_manager_title">Google Account Manager</string>
    <string name="sorry">Sorry…</string>
    <string name="auth_before_connect">"Connect Google account with microG.

Let's connect to a Google account, use the <b>Sign in</b> button or use the <b>Huawei</b> button if you have a device with this manufacturer. By pressing one of the buttons you will be redirected to the page to login to your account."</string>
    <string name="auth_sign_in">Sign in</string>
    <string name="auth_huawei_button" translatable="false">Huawei</string>
    <string name="auth_connecting">"Your device is establishing a connection to Google’s servers to sign you in.

This can take a few seconds"</string>
    <string name="auth_no_network_error_desc">"You don’t have a network connection.

This could be a temporary problem or your Android device may not be provisioned for data services. Try again when connected to a mobile network, or connect to a Wi-Fi network"</string>
    <string name="auth_general_error_desc">"There was a problem communicating with Google servers.

Try again later"</string>
    <string name="auth_finalize">"Your device is contacting Google to save information to your account.

This can take a couple of minutes"</string>
    <string name="auth_notification_title">Authentication required</string>
    <string name="auth_notification_content"><xliff:g example="F-Droid">%1$s</xliff:g> requires your authorization to access your Google account.</string>
    <string name="service_name_mcs">Cloud Messaging</string>
    <string name="gcm_enable_switch">Receive push notifications</string>
    <string name="gcm_registered">Registered</string>
    <string name="gcm_unregister_app">Unregister</string>
    <string name="gcm_remove_registers_dialog_title">Remove all registers?</string>
    <string name="gcm_unregister_confirm_title">Unregister <xliff:g example="F-Droid">%1$s</xliff:g>?</string>
    <string name="service_name_checkin">Device Registration</string>
    <string name="self_check_resolution_battery_optimizations">Touch here to disable battery optimizations. Not doing this may result in misbehaving applications.</string>
    <string name="prefcat_accounts_login_accounts_title">Logged in</string>
    <string name="prefcat_accounts_options_title">Options</string>
    <string name="prefcat_youtube_activity">YouTube Activity</string>
    <string name="prefcat_applications">Applications</string>
    <string name="prefcat_authentication">Authentication</string>
    <string name="pref_info_status">Status</string>
    <string name="pref_accounts_summary">Add and manage Google accounts</string>
    <string name="pref_accounts_manage_accounts_title">Manage accounts</string>
    <string name="pref_accounts_manage_accounts_summary">Open device accounts manager</string>
    <string name="pref_manage_all_history">Manage all history</string>
    <string name="pref_data_in_youtube">Your data in YouTube</string>
    <string name="pref_accounts_login_accounts_summary">Accounts are saved and stored only on this device. Tap an account to remove from this device permanently</string>
    <string name="pref_device_registration_device_profile_category">Device profile</string>
    <string name="pref_device_registration_select_profile_title">Select profile</string>
    <string name="pref_device_registration_import_custom_profile_title">Import custom profile</string>
    <string name="pref_device_registration_import_custom_profile_summary">Import device profile from file</string>
    <string name="pref_device_registration_serial_title">Serial</string>
    <string name="pref_device_registration_android_id">Android ID</string>
    <string name="pref_checkin_enable_summary">Registers your device to Google services and creates a unique device identifier. microG strips identifying bits other than your Google account name from registration data.</string>
    <string name="pref_privacy_title">Privacy</string>
    <string name="pref_privacy_summary">Privacy settings for authentication and apps</string>
    <string name="pref_auth_trust_google_title">Trust Google for app permissions</string>
    <string name="pref_auth_trust_google_summary">When disabled, the user is asked before an app\'s authorization request is sent to Google. Some applications will fail to use the Google account if this is disabled.</string>
    <string name="pref_auth_visible_title">Allow apps to find accounts</string>
    <string name="pref_auth_visible_summary">When enabled, all applications on this device will be able to see email address of your Google Accounts without prior authorization.</string>
    <string name="pref_auth_include_android_id_title">Authenticate with device registration</string>
    <string name="pref_auth_include_android_id_summary">When disabled, authentication requests won\'t be linked to the device registration, which may allow unauthorized devices to sign in, but may have unforeseen consequences.</string>
    <string name="pref_auth_strip_device_name_title">Strip device name for authentication</string>
    <string name="pref_auth_strip_device_name_summary">When enabled, authentication requests won\'t include the device\'s name, which may allow unauthorized devices to sign in, but may have unforeseen consequences.</string>
    <string name="pref_hide_launcher_icon">Hide icon in launcher</string>
    <string name="pref_about_title">About MicroG RE</string>
    <string name="pref_github" translatable="false">GitHub</string>
    <string name="pref_github_summary">Source code repository</string>
    <string name="service_name_device_attestation">Device Attestation</string>
    <string name="service_name_vending">Play Store services</string>
    <string name="service_name_work_profile">Work profile</string>
    <string name="cond_gcm_bat_action">Ignore optimizations</string>
    <string name="pref_auth_two_step_verification_title">Receive two-step verification prompts</string>
    <string name="pref_auth_two_step_verification_summary">When enabled, the device can receive two-step verification prompts from Google (Cloud Messaging is required).</string>
    <string name="pref_auth_allow_find_devices_title">Allow responding to Google Device Finder</string>
    <string name="pref_auth_allow_find_devices_summary">When enabled, the device can respond to Find My Device notifications from Google (Cloud Messaging is required).</string>
    <string name="pref_accounts_title">Accounts</string>
    <string name="prefcat_accounts_settings_title">Settings</string>
    <string name="safetynet_intro">Google SafetyNet is a device certification system, ensuring that the device is properly secured and compatible with Android CTS. Some applications use SafetyNet for security reasons or as a prerequisite for tamper-protection.\n\nmicroG GmsCore contains a free implementation of SafetyNet, but the official server requires SafetyNet requests to be signed using the proprietary DroidGuard system.</string>
    <string name="safetynet_enable_switch">Allow device attestation</string>
    <string name="pref_safetynet_test_title">Test SafetyNet attestation</string>
    <string name="pref_recaptcha_test_title">Test ReCAPTCHA</string>
    <string name="pref_recaptcha_enterprise_test_title">Test ReCAPTCHA Enterprise</string>
    <string name="pref_test_summary_passed">Passed all tests</string>
    <string name="pref_droidguard_unsupported_summary">DroidGuard execution is unsupported on this device. SafetyNet services may misbehave.</string>
    <string name="prefcat_safetynet_apps_title">Apps using SafetyNet</string>
    <string name="pref_safetynet_recent_copy_json">Copy JSON JWS data</string>
    <string name="pref_safetynet_recent_advice">Advice</string>
    <string name="pref_safetynet_recent_eval_type">Evaluation type</string>
    <string name="pref_safetynet_recent_response_status">Response status</string>
    <string name="pref_safetynet_recent_cat_response">Response data</string>
    <string name="pref_safetynet_recent_cat_request">Request data</string>
    <string name="pref_safetynet_recent_nonce">Nonce (Hex)</string>
    <string name="pref_safetynet_recent_request_time">Time of request</string>
    <string name="pref_safetynet_recent_request_type">Request type</string>
    <string name="pref_safetynet_recent_cat_basic">Basic data</string>
    <string name="pref_vending_licensing_category">Google Play Licensing</string>
    <string name="pref_vending_licensing_enable_switch">Answer license verification requests</string>
    <string name="pref_vending_license_enable_summary">Some apps require verification that you have purchased them on Google Play. When requested by an app, microG can download a proof of purchase from Google. If disabled, or if no Google account is added, requests for license verification are ignored.</string>
    <string name="pref_vending_billing_category">Google Play Billing</string>
    <string name="pref_vending_billing_enable_switch">Handle billing requests</string>
    <string name="pref_vending_billing_enable_summary">Once enabled, some apps can complete purchases or start subscriptions through Google\'s Play Billing service.</string>
    <string name="pref_vending_billing_note_experimental">This feature is experimental and may lead to loss of money. You have been warned.</string>
    <string name="pref_vending_billing_note_licensing">Some apps may require you to also enable license verification to verify your purchases.</string>
    <string name="pref_auto_create_player">Allow Play Games account registration</string>
    <string name="pref_auto_create_player_intro">When playing games, you need to use a Play Games account to log in and record game-related functions, such as achievements, leaderboards, archives, etc. After disabling, Google accounts that are not bound to a Play Games account will not be automatically registered, and the game will not be able to log in and play.</string>
    <string name="pref_allow_upload_game_played">Allow uploading of game played</string>
    <string name="pref_allow_upload_game_played_summary">When disabled, the game will not report the game played status after logging into the game, and some games may not be able to log in.</string>
    <string name="pref_change_default_game_player">Change account for games</string>
    <string name="pref_change_default_game_player_summary">Change the default account for games &amp; Change the account by game.</string>
    <string name="pref_delete_game_account_data">Delete Play Games data</string>
    <string name="pref_delete_game_account_data_summary">Delete Play Games account &amp; all data &amp; Delete individual game data.</string>
</resources>