<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2013-2017 microG Project Team
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout="@layout/preference_material_category_small"
        android:title="@string/prefcat_applications" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="auth_manager_trust_google"
        android:layout="@layout/preference_material_top"
        android:summary="@string/pref_auth_trust_google_summary"
        android:title="@string/pref_auth_trust_google_title"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="auth_manager_visible"
        android:layout="@layout/preference_material_bottom"
        android:summary="@string/pref_auth_visible_summary"
        android:title="@string/pref_auth_visible_title"
        app:iconSpaceReserved="false" />

    <PreferenceCategory
        android:layout="@layout/preference_material_category"
        android:title="@string/prefcat_authentication"
        app:allowDividerAbove="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="auth_include_android_id"
        android:layout="@layout/preference_material_top"
        android:summary="@string/pref_auth_include_android_id_summary"
        android:title="@string/pref_auth_include_android_id_title"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="auth_strip_device_name"
        android:layout="@layout/preference_material_middle"
        android:summary="@string/pref_auth_strip_device_name_summary"
        android:title="@string/pref_auth_strip_device_name_title"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:persistent="false"
        android:key="auth_two_step_verification"
        android:layout="@layout/preference_material_middle"
        android:summary="@string/pref_auth_two_step_verification_summary"
        android:title="@string/pref_auth_two_step_verification_title"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:persistent="false"
        android:key="auth_allow_find_devices"
        android:layout="@layout/preference_material_bottom"
        android:summary="@string/pref_auth_allow_find_devices_summary"
        android:title="@string/pref_auth_allow_find_devices_title"
        app:iconSpaceReserved="false" />
</PreferenceScreen>
