<?xml version="1.0" encoding="utf-8"?><!--
  ~ SPDX-FileCopyrightText: 2023, e Foundation
  ~ SPDX-License-Identifier: Apache-2.0
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_vending_licensing_category">
        <org.microg.gms.ui.TextPreference
            android:selectable="false"
            android:summary="@string/pref_vending_license_enable_summary" />
        <SwitchPreferenceCompat
            android:title="@string/pref_vending_licensing_enable_switch"
            android:key="vending_licensing"
            android:persistent="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_vending_billing_category">
        <org.microg.gms.ui.TextPreference
            android:selectable="false"
            android:summary="@string/pref_vending_billing_enable_summary" />
        <SwitchPreferenceCompat
            android:title="@string/pref_vending_billing_enable_switch"
            android:key="vending_iap"
            android:persistent="false" />
        <org.microg.gms.ui.TextPreference
            android:icon="@drawable/ic_circle_warn"
            android:selectable="false"
            android:summary="@string/pref_vending_billing_note_experimental" />
        <org.microg.gms.ui.TextPreference
            android:icon="@drawable/ic_info_outline"
            android:selectable="false"
            android:summary="@string/pref_vending_billing_note_licensing" />
    </PreferenceCategory>
</PreferenceScreen>
