<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="prefcat_current_accounts"
        android:layout="@layout/preference_material_category_small"
        android:title="@string/prefcat_accounts_login_accounts_title"
        android:visibility="gone"
        app:allowDividerAbove="false" />

    <PreferenceCategory
        android:key="prefcat_account_settings"
        android:layout="@layout/preference_material_category"
        android:title="@string/prefcat_accounts_options_title"
        app:allowDividerAbove="false">

        <Preference
            android:icon="@drawable/ic_privacy"
            android:key="pref_privacy"
            android:layout="@layout/preference_material_top"
            android:summary="@string/pref_privacy_summary"
            android:title="@string/pref_privacy_title" />

        <Preference
            android:icon="@drawable/ic_manage_account"
            android:key="pref_manage_accounts"
            android:layout="@layout/preference_material_bottom"
            android:summary="@string/pref_accounts_manage_accounts_summary"
            android:title="@string/pref_accounts_manage_accounts_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_material_category"
        android:title="@string/prefcat_youtube_activity"
        app:allowDividerAbove="false">

        <Preference
            android:icon="@drawable/ic_youtube_history"
            android:key="pref_manage_history"
            android:layout="@layout/preference_material_top"
            android:title="@string/pref_manage_all_history" />

        <Preference
            android:icon="@drawable/ic_youtube_data"
            android:key="pref_your_data"
            android:layout="@layout/preference_material_bottom"
            android:title="@string/pref_data_in_youtube" />
    </PreferenceCategory>

    <Preference
        android:icon="@drawable/ic_information"
        android:layout="@layout/preference_material_information"
        android:selectable="false"
        android:title="@string/pref_accounts_login_accounts_summary" />

    <Preference
        android:layout="@layout/preference_material_scroll_margin"
        android:selectable="false" />
</PreferenceScreen>
