<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory
        android:layout="@layout/preference_material_category"
        android:title="@string/pref_safetynet_recent_cat_basic"
        app:iconSpaceReserved="false">
        <Preference
            android:key="pref_request_type"
            android:layout="@layout/preference_material_top"
            android:selectable="false"
            android:title="@string/pref_safetynet_recent_request_type"
            app:iconSpaceReserved="false"
            tools:summary="ATTESTATION" />

        <Preference
            android:key="pref_time"
            android:layout="@layout/preference_material_bottom"
            android:selectable="false"
            android:title="@string/pref_safetynet_recent_request_time"
            app:iconSpaceReserved="false"
            tools:summary="1970/01/01 1:00 AM" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_material_category"
        android:title="@string/pref_safetynet_recent_cat_request"
        app:iconSpaceReserved="false">

        <Preference
            android:key="pref_nonce"
            android:layout="@layout/preference_material_single"
            android:selectable="false"
            android:title="@string/pref_safetynet_recent_nonce"
            app:iconSpaceReserved="false"
            tools:summary="68b329da9893e34099c7d8ad5c" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_material_category"
        android:title="@string/pref_safetynet_recent_cat_response"
        app:iconSpaceReserved="false">
        <Preference
            android:key="pref_status"
            android:layout="@layout/preference_material_top"
            android:selectable="false"
            android:title="@string/pref_safetynet_recent_response_status"
            app:iconSpaceReserved="false"
            tools:summary="CTS failed" />

        <Preference
            android:key="pref_eval_type"
            android:layout="@layout/preference_material_middle"
            android:selectable="false"
            android:title="@string/pref_safetynet_recent_eval_type"
            app:iconSpaceReserved="false"
            tools:summary="HARDWARE_BACKED" />

        <Preference
            android:key="pref_advice"
            android:layout="@layout/preference_material_middle"
            android:selectable="false"
            android:title="@string/pref_safetynet_recent_advice"
            app:iconSpaceReserved="false"
            tools:summary="RESTORE_TO_FACTORY_ROM" />

        <Preference
            android:key="pref_copy_result"
            android:layout="@layout/preference_material_bottom"
            android:title="@string/pref_safetynet_recent_copy_json"
            app:icon="?attr/actionModeCopyDrawable" />
    </PreferenceCategory>

</PreferenceScreen>
