<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory
        android:key="prefcat_device_profile"
        android:layout="@layout/preference_material_category"
        android:title="@string/pref_device_registration_device_profile_category"
        app:iconSpaceReserved="false">
        <ListPreference
            android:key="pref_device_profile"
            android:layout="@layout/preference_material_top"
            android:persistent="false"
            android:title="@string/pref_device_registration_select_profile_title"
            tools:summary="Automatic (Google Pixel 3, Android 11)"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="pref_device_profile_import"
            android:layout="@layout/preference_material_middle"
            android:summary="@string/pref_device_registration_import_custom_profile_summary"
            android:title="@string/pref_device_registration_import_custom_profile_title"
            app:iconSpaceReserved="false" />
        <Preference
            android:enabled="false"
            android:key="pref_device_serial"
            android:layout="@layout/preference_material_bottom"
            android:title="@string/pref_device_registration_serial_title"
            tools:summary="123456"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="prefcat_device_registration_status"
        android:layout="@layout/preference_material_category"
        app:iconSpaceReserved="false">
        <Preference
            android:enabled="false"
            android:key="pref_device_registration_status"
            android:layout="@layout/preference_material_top"
            android:title="@string/pref_info_status"
            tools:summary="Last registration: 13 hours ago"
            app:iconSpaceReserved="false" />
        <Preference
            android:enabled="false"
            android:key="pref_device_registration_android_id"
            android:layout="@layout/preference_material_bottom"
            android:title="@string/pref_device_registration_android_id"
            tools:summary="1953a59d1c1b7e4b"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preference_category_no_label">
        <org.microg.gms.ui.FooterPreference
            android:selectable="false"
            android:title="@string/pref_checkin_enable_summary" />
    </PreferenceCategory>
</PreferenceScreen>
